[package]
name = "rust-playground"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "io_bench"
path = "src/io_bench.rs"

[[bin]]
name = "io_async_cost"
path = "src/io_async_cost.rs"

[[bin]]
name = "crossbeam_atomic_cell"
path = "src/crossbeam_atomic_cell.rs"

[[bin]]
name = "hdfs_write"
path = "src/hdfs.rs"

[[bin]]
name = "hdrs_write"
path = "src/hdrs.rs"

[dependencies]
tokio = { version = "1", features = ["full"] }
anyhow = { version = "1" }
bytes = { version = "1" }
clap = "3.0.14"
opendal = { version = "0.44.0", features = ["services-fs"] }
crossbeam = "0.8.2"
roaring = "0.10.6"
hdfs-native = "0.10.3"
url = "2.5.3"
hdrs = "0.3.2"