[package]
name = "rust-playground"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "io_write_bench"
path = "src/io_write_bench.rs"

[[bin]]
name = "io_read_bench"
path = "src/io_read_bench.rs"

[[bin]]
name = "io_async_cost"
path = "src/io_async_cost.rs"

[[bin]]
name = "crossbeam_atomic_cell"
path = "src/crossbeam_atomic_cell.rs"

[[bin]]
name = "hdfs_write"
path = "src/hdfs.rs"

[[bin]]
name = "hdrs_write"
path = "src/hdrs.rs"

[[bin]]
name = "deamon"
path = "src/deamon.rs"

[[bin]]
name = "bytes_transfer"
path = "src/bytes_transfer.rs"

[[bin]]
name = "memory_profile"
path = "src/memory_profile.rs"

[[bin]]
name = "hdrs_with_memory_profile"
path = "src/hdrs_with_memory_profile.rs"

[profile.dev]
opt-level = 0

[profile.release]
opt-level = 0

[dependencies]
tokio = { version = "1", features = ["full"] }
anyhow = { version = "1" }
bytes = { version = "1.9.0" }
clap = "3.0.14"
opendal = { version = "0.44.0", features = ["services-fs"] }
crossbeam = "0.8.2"
roaring = "0.10.6"
hdfs-native = "0.10.3"
url = "2.5.3"
hdrs = "0.3.2"
daemonize = "0.5.0"
libc = "0.2"
hdrhistogram = "7.5.4"
positioned-io = "0.3.3"
tikv-jemalloc-ctl = { version = "0.6", features = ["use_std"] }
tikv-jemallocator = "0.6"
axum = "0.7.2"
jemalloc_pprof = { git = "https://github.com/erikgrinaker/rust-jemalloc-pprof.git", branch = "symbolize", features = ["symbolize"]}
[target.'cfg(not(target_env = "msvc"))'.dependencies]
tikv-jemallocator = { version = "0.6", features = ["profiling", "stats", "unprefixed_malloc_on_supported_platforms", "background_threads"] }
candle-core = "0.9.1"
candle-nn = "0.9.1"